--- a/themes/cerber/templates/common/signup.html
+++ b/themes/cerber/templates/common/signup.html
@@ -32,13 +32,23 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="3" required>
+					<div class="row">
+						<div class="col-xs-6 col-sm-6 col-md-6">
+							<div class="form-group">
+								<input type="text" name="username" id="username" class="form-control input-lg" placeholder="Email Address" tabindex="3" required>
+							</div>
+						</div>
+						<div class="col-xs-6 col-sm-6 col-md-6">
+							<div class="form-group">
+								@{{ .domain }}
+							</div>
+						</div>
 					</div>
-
+					<!--
 					<div class="form-group">
-						<input type="text" name="username" id="username" class="form-control input-lg" placeholder="User Name" tabindex="4" required>
+						<input type="text" name="email" id="email" class="form-control input-lg" placeholder="User Name" tabindex="4" required>
 					</div>
+					-->
 
 					<div class="row">
 						<div class="col-xs-6 col-sm-6 col-md-6">
