--- a/themes/cerber/templates/mailbox/_list.html
+++ b/themes/cerber/templates/mailbox/_list.html
@@ -37,6 +37,9 @@
 			<button type="button" class="btn btn-default" data-toggle="tooltip" title="Refresh">
 			    &nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-refresh"></span>&nbsp;&nbsp;&nbsp;
 			</button>
+			<button type="button" class="btn btn-default" data-toggle="tooltip" title="Compose">
+			    &nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;&nbsp;
+			</button>
 
 			{{if .pagination.Total }}
 				<div class="pull-right">
